--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <div class="hero"></div>
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="article">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -35,7 +35,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="article">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -44,7 +44,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="article">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -55,7 +55,7 @@
         </article>
     </section>
     <aside class="benefits">
-        <article class="benefit-lead">
+        <article class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -63,7 +63,7 @@
                 to your website.
             </p>
         </article>
-        <article class="benefit-brand">
+        <article class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -71,7 +71,7 @@
                 for your business.
             </p>
         </article>
-        <article class="benefit-cost">
+        <article class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
